web/manifest-file/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-service
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 3000
