web/manifest-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: myweb.techno028.shop
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: myweb.techno028.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myweb-service
            port:
              number: 9090
